Remove several System.out.println(...) statements and replace them with appropriate exceptions and logging in LearningAlgorithm.